# turboquant-llama-lab

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: README.md
cpp/include/turboquant/: turboquant.h
cpp/src/: turboquant.cpp
cpp/tools/: turboquant-bench.cpp
docs/: ARCHITECTURE.md  LAUNCH_KIT.md  PUBLISHING.md  QUICKSTART.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  USAGE_PROFILES.md  VALIDATED_MODELS.md
examples/: README.md
patches/llama.cpp/: README.md
scripts/: README.md  export_llama_cpp_patches.sh  validate_llama_cli.py
